# homework_m08

hw_m08_01/: config.ini  find_quotes.py  models.py  pyproject.toml  seeds.py
hw_m08_02/: config.ini  consumer.py  models.py  producer.py  pyproject.toml
hw_m08_03/: 01_test.py  config.ini  consumer_email.py  consumer_sms.py  models.py  producer.py  pyproject.toml
