[tool.poetry]
name = "hw-m08-03"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "hw_m08_03" }]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
mongoengine = "^0.27.0"
faker = "^18.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
